test/test_examples/syntactic_examples/syntax_error/error_fun_def_19.zig
// Syntax error: invalid function return type

const ifj = @import("ifj24.zig"); 

pub fn foo() null {

}  